[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "inf_surveys"
dynamic = ["version"]
authors = [
  { name="Clément Turbelin", email="clement.turbelin@iplesp.upmc.fr" },
]
description = "Influenzanet surveys management library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["influenzanet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "jinja2==3",
  "jsonschema==4.*"
]

[project.urls]
"Homepage" = "https://github.com/influenzanet/ifn-surveys"
"Bug Tracker" = "https://github.com/influenzanet/ifn-surveys/issues"